Removed Section tag from Head
Removed section tag from Head

--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <section id="meta data">
-            <meta charset="UTF-8">
-            <meta name="keywords" content="Interactive Media,Blog,Theory,Home Page">
-            <meta name="revised" content="WSOA Website Home Page, 2020/03/16/">
-            <meta name="author" content="Ryan Ka Kit Leong">
-            <meta name="description" content="Home Page Describing the websites purpose and navigation to its respective sections">
-            <meta name="viewport" content="width=device-width", initial-scale=1>
-            <meta http-equiv="refresh" content="30">
-            <title>Home Page.</title>
-        </section>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="Interactive Media,Blog,Theory,Home Page">
+        <meta name="revised" content="WSOA Website Home Page, 2020/03/16/">
+        <meta name="author" content="Ryan Ka Kit Leong">
+        <meta name="description" content="Home Page Describing the websites purpose and navigation to its respective sections">
+        <meta name="viewport" content="width=device-width", initial-scale=1>
+        <meta http-equiv="refresh" content="30">
+        <title>Home Page.</title>
 
-        <section id="Scripts">
-            <script src="./Scripts/HomePageFunctions.js"></script>
-        </section>
+        <script src="./Scripts/HomePageFunctions.js"></script>
 
-        <section id="External Files">
-            <link rel="stylesheet" href="./Styling/style.css" title="Style Guide" type="text/css">
-        </section>
+        <link rel="stylesheet" href="./Styling/style.css" title="Style Guide" type="text/css">
+ 
     </head>
     <body>
         <h1>Student Weeb Alliance</h1>
@@ -74,9 +69,9 @@
         </section>
 
         <Section id="GallerySources">
-            <img data-src="./Images/Crossbone.jpeg" alt="" width="800" height="400">
-            <img data-src="./Images/MK2.jpeg" alt="" width="800" height="400">
-            <img data-src="./Images/Zeta.jpeg" alt="" width="800" height="400">
+            <img src="./Images/Crossbone.jpeg" alt="Image of Crossbone Model" width="800" height="400" title="HG Crossbone Gundam">
+            <img src="./Images/MK2.jpeg" alt="Image of Gundam MK2 Model" width="800" height="400" title="HG MK2 Model">
+            <img src="./Images/Zeta.jpeg" alt="Image of Zeta plus Model" width="800" height="400" title="HG Zeta Plus Model">
         </Section>
     </body>
 </html>
