Addressed form factors, added articles and images

--- a/Profile/index.html
+++ b/Profile/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="A user profile Index">
         <meta name="viewport" content="width=device-width", initial-scale=1>
         <meta http-equiv="refresh" content="30">
-        <title>User Profile Ryan</title>   
+        <title>Profile Index</title>   
 
         <link rel="stylesheet" href="/./Styling/style.css" title="Style Guide" type="text/css">
 
@@ -24,13 +24,11 @@
 
             <ul>
                 <li><a class="active" href="../Index.html">Home</a></li>
-                <li><a class="active" href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
-                <li><a class="active" href="../Blogs/BlogIndex.html">Theory Archive</a></li>
-                <li><a class="active" href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
-                <li><a class="active" href="../Hobby/index.html">Hobby Archive</a></li>
+                <li><a class="active" href="../Blogs/BlogMainPage.html">Theory</a></li>
+                <li><a class="active" href="../Hobby/MainPage.html">Hobby</a></li>
                 <li><a class="active" href="./index.html">Profiles</a></li>
-
-                <li><button name="Back Button" onclick="history.back()">Back</button></li>
+    
+                <li><button name="Back Button" onclick="history.back()">BACK</button></li>
             </ul>
         </nav>
 
