fixed some form factor stuff

--- a/Profile/index.html
+++ b/Profile/index.html
@@ -17,20 +17,22 @@
     <body>
         <h1>Blog Post Archive</h1>
         
+        <header>
         <nav id="Navigation Bar">
-            <p class="NavTitle">
+                <p class="NavTitle">
                 Navigation
-            </p>
+                </p>
 
-            <ul>
-                <li><a class="active" href="../Index.html">Home</a></li>
-                <li><a class="active" href="../Blogs/BlogMainPage.html">Theory</a></li>
-                <li><a class="active" href="../Hobby/MainPage.html">Hobby</a></li>
-                <li><a class="active" href="./index.html">Profiles</a></li>
+                <ul>
+                    <li><a class="active" href="../Index.html">Home</a></li>
+                    <li><a class="active" href="../Blogs/BlogMainPage.html">Theory</a></li>
+                    <li><a class="active" href="../Hobby/MainPage.html">Hobby</a></li>
+                    <li><a class="active" href="./index.html">Profiles</a></li>
     
-                <li><button name="Back Button" onclick="history.back()">BACK</button></li>
-            </ul>
-        </nav>
+                    <li><button name="Back Button" onclick="history.back()">BACK</button></li>
+                </ul>
+            </nav>
+        </header>
 
         <h2>
             Profiles
