Added carousel using bootstrap css and js libraries

--- a/Blogs/BlogMainPage.html
+++ b/Blogs/BlogMainPage.html
@@ -316,7 +316,7 @@
             <article
                 class="acontent"
                 id="Ethics of UI and UX"
-                data-index-number="TS8"
+                data-index-number="TS9"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:47 pm"
@@ -341,6 +341,32 @@
                 </aside>
             </article>
 
+            <article
+                class="acontent"
+                id="Style Guide Template"
+                data-index-number="SG1"
+                data-category="Theory Blog Posts"
+                data-author="Ryan Ka Kit Leong"
+                data-time-published="04:05am"
+                data-date-published="29 June 2020"
+                >
+
+                <h3>
+                    Website Style guide
+                </h3>
+
+                <p>
+                    This article is a general style guide for the website that gives a brief rationale over its design choices.   
+                </p>
+
+                <aside>
+                    by Ryan Ka Kit Leong
+
+                    <br>
+
+                    <a href="ArticleStyleGuide.html">Read Full Article</a>
+                </aside>
+            </article>
             
         </main>
     </body>
