Added external dependancy post

--- a/Blogs/BlogMainPage.html
+++ b/Blogs/BlogMainPage.html
@@ -367,6 +367,33 @@
                     <a href="ArticleStyleGuide.html">Read Full Article</a>
                 </aside>
             </article>
+
+            <article
+                class="acontent"
+                id="External Dependancies"
+                data-index-number="TA10"
+                data-category="Theory Blog Posts"
+                data-author="Ryan Ka Kit Leong"
+                data-time-published="22:07pm"
+                data-date-published="29 June 2020"
+                >
+
+                <h3>
+                    External Dependancies 
+                </h3>
+
+                <p>
+                    This article discusses the use of external dependancies on this website and discusses them in relation to the theory and hobby posts   
+                </p>
+
+                <aside>
+                    by Ryan Ka Kit Leong
+
+                    <br>
+
+                    <a href="ExternalDep.html">Read Full Article</a>
+                </aside>
+            </article>
             
         </main>
     </body>
