--- a/Blogs/Ethics.html
+++ b/Blogs/Ethics.html
@@ -90,7 +90,7 @@
                     However, if we consider the mystifying of value in an online context a number of concerns arise. 
                     Firstly, while the internet can serve as an equaliser in information distribution, 
                     the way in which search engines operate can make it difficult to gain a wider understanding or context of a subject matter without conscious effort 
-                    (For more details on information obscuration, Click here).
+                    (For more details on information obscuration, <a href="./TheDigitalDivideArticle.html">Click here</a> ).
                      Secondly, with online banking and purchases we now have a platform in which we can spend money on more things and faster. 
                      Pairing these two points together can create a culture of detrimental spending habits on items of induced demand and value, 
                     in a similar manner to gambling.
