--- a/Index.html
+++ b/Index.html
@@ -78,13 +78,13 @@
            
             <section class="carousel-inner">
               <figure class="carousel-item active">
-                <img src="./Images/Zeta.jpeg" alt="Zeta Plus" width="50%" >
+                <a href="./Hobby/ZetaPlusReview.html"><img src="./Images/Zeta.jpeg" alt="Zeta Plus" width="50%" ></a>
               </figure>
               <figure class="carousel-item">
-                <img src="./Images/MK2.jpeg" alt="MK2" width="50%" >
+                <a href="./Hobby/MKIIReview.html"><img src="./Images/MK2.jpeg" alt="MK2" width="50%" ></a>
               </figure>
               <figure class="carousel-item">
-                <img src="./Images/CrossboneProfile.jpeg" alt="Crossbone" width="50%">
+                <a href="./Hobby/CrossboneReview.html"><img src="./Images/CrossboneProfile.jpeg" alt="Crossbone" width="50%"></a>
               </figure>
             </section>
             
