fixed typing and pathing mistakes

--- a/Blogs/BlogMainPage.html
+++ b/Blogs/BlogMainPage.html
@@ -278,7 +278,7 @@
 
                     <br>
 
-                    <a href="TheDigitalDivideArticle.html">Read Full Article</a>
+                    <a href="GrahamCloseReading.html">Read Full Article</a>
                 </aside>
             </article>
             
