--- a/Profile/Fake.html
+++ b/Profile/Fake.html
@@ -10,7 +10,7 @@
         <meta http-equiv="refresh" content="30">
         <title>User Profile name</title>
 
-        <link rel="stylesheet" href="/./Styling/style.css" title="Style Guide" type="text/css">
+        <link rel="stylesheet" href="../Styling/style.css" title="Style Guide" type="text/css">
 
     </head>
     <body>
